--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,23 +2,23 @@
 <header class='top-page-header'>
   <div class='search-bar-contents'>
     <%= link_to image_tag("IMG_0096.PNG", class:"fridge-icon"), "/" %>
-    <form class="search-form" action="#">
+    <%# <form class="search-form" action="#">
       <input class='input-box' placeholder='冷蔵庫を探す'>
       <button id="search-btn"><i class="fa-solid fa-magnifying-glass my-glass"></i></button>
-    </form>
-  </div>
-  <div class='nav'>
-    <ul class='lists-left'>
-      <li>さぁ、今日は何を作ろう</li>
-    </ul>
-    <ul class='lists-right'>
-      <% if user_signed_in? %>
-        <li><%= link_to "マイページ", user_path(current_user.id), class: "user-nickname" %></li>
-        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
-      <% else %>
-        <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-        <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
-      <% end %>
-    </ul>
+    </form> %>
+    <div class='nav'>
+      <%# <ul class='lists-left'>
+        <li>さぁ、今日は何を作ろう</li>
+      </ul> %>
+      <ul class='lists-right'>
+        <% if user_signed_in? %>
+          <li><%= link_to "マイページ", user_path(current_user.id), class: "user-nickname" %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+        <% else %>
+          <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+          <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 </header>
